# physlab2024-comp-qcd

./: CMakeLists.txt  Cargo.toml  README.md
docs/: lecture_6-7.2.typ  links.md
docs/git/: usage.md
src/: capacity.rs  ising.rs  main.cpp  main.rs  monte.rs  qcd.rs  test_linalg.rs
