[package]
name = "physlab2024-comp-qcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
konst = "0.3.8"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
rand = "0.8.5"
